tdf#125079 turn off GTK_WIN_POS_CENTER_ON_PARENT after a while

Change-Id: Ib268a6b32257aee812e5bae27a6db94431d2abbb