vcl/unx/gtk3/gtk3gtkinst.cxx
@@ -2573,9 +2573,12 @@ public:
         return Point(current_x, current_y);
     }
 
-    virtual void set_centered_on_parent_geometry_request() override
+    virtual void set_centered_on_parent(bool bTrackGeometryRequests) override
     {
-        gtk_window_set_position(m_pWindow, GTK_WIN_POS_CENTER_ALWAYS);
+        if (bTrackGeometryRequests)
+            gtk_window_set_position(m_pWindow, GTK_WIN_POS_CENTER_ALWAYS);
+        else
+            gtk_window_set_position(m_pWindow, GTK_WIN_POS_CENTER_ON_PARENT);
     }
 
     virtual bool get_resizable() const override
